external-applications/alb-nginx-mapper-ingress.yaml
#kubectl apply -f alb-nginx-mapper-ingress.yaml 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "myalb"
  labels:
    app: "myalbapp"
  annotations:
    # trigger the alb-ingress-controller
    kubernetes.io/ingress.class: "alb"
    # set ALB parameters
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "instance"
    #public subnet id in which ALB needs to be created
    alb.ingress.kubernetes.io/subnets: subnet-051ff3f573e73d106,subnet-001cc3ef9e3f4a2a2,subnet-049f5575262d4718a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # allow 404s on the health check
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200,404"
spec:
  # forward all requests to nginx-ingress-controller
  rules:
  - http:
      paths:
      - path: "/*"
        backend:
          serviceName: "nginx-nginx-ingress-controller"
          servicePort: 80
